# configmap-generator-operator

./: .gitignore  Cargo.toml  Dockerfile  bundle.Dockerfile  justfile  readme.md
hack/: configmapgen_controller_object.yaml
my-output-manifest-dir/manifests/: configmapcontroller.clusterserviceversion.yaml  configmapgenerator.crd.yaml
my-output-manifest-dir/metadata/: annotations.yaml
src/: main.rs
